Uploaded image for project: 'Couchbase Server'
  1. Couchbase Server
  2. MB-40126

Subdoc CreateAsDeleted without any value path can result in non-empty value

    XMLWordPrintable

Details

    • Untriaged
    • Centos 64-bit
    • 1
    • No
    • KV Sprint 2020-June

    Description

      Build: 6.6.0-7834

      Test case:

      ./testrunner -i node.ini threads_to_use=8,rerun=False,skip_cleanup=True,get-cbcollect-info=False,skip_collections_cleanup=True -t Atomicity.doc_isolation.IsolationDocTest.test_staged_doc_read,nodes_init=2,num_items=1,replicas=1,transaction_timeout=30,transaction_commit=True,doc_op=create,operation=beforeAtrPending,GROUP=P0

      Cbcollect logs:
      https://cb-jira.s3.us-east-2.amazonaws.com/logs/transaction_crash/collectinfo-2020-06-24T195940-ns_1%4010.112.191.105.zip
      https://cb-jira.s3.us-east-2.amazonaws.com/logs/transaction_crash/collectinfo-2020-06-24T195940-ns_1%4010.112.191.106.zip
      Scenario:

      • Two node cluster, Couchbase bucket with replica=1
      • Start transaction with expiry of 30 seconds. Forcefully fail the transaction during "beforeAtrPending" and retry

      Expected behavior:

      Failed transaction should succeed without any issues

      Service 'memcached' exited with status 134. Restarting. Messages:
      2020-06-24T12:53:01.819552-07:00 CRITICAL /opt/couchbase/bin/../lib/libstdc++.so.6() [0x7f0c401a8000+0x8f213]
      2020-06-24T12:53:01.819559-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0xcccd0]
      2020-06-24T12:53:01.819564-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0xc811a]
      2020-06-24T12:53:01.819570-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0xca523]
      2020-06-24T12:53:01.819576-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0x18f490]
      2020-06-24T12:53:01.819581-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0xcfa4d]
      2020-06-24T12:53:01.819586-07:00 CRITICAL /opt/couchbase/bin/../lib/../lib/ep.so() [0x7f0c3aca6000+0x12b764]
      2020-06-24T12:53:01.819590-07:00 CRITICAL /opt/couchbase/bin/../lib/libplatform_so.so.0.1.0() [0x7f0c42257000+0x8f17]
      2020-06-24T12:53:01.819594-07:00 CRITICAL /lib64/libpthread.so.0() [0x7f0c3fa73000+0x7df3]
      2020-06-24T12:53:01.819621-07:00 CRITICAL /lib64/libc.so.6(clone+0x6d) [0x7f0c3f6b2000+0xf61ad]

      Attaching test.log and  trans_expired_with_d_ambiguous.pcapng for further debugging.

      Attachments

        1. _7845_client-op.png
          _7845_client-op.png
          390 kB
        2. _7845_invalid-prepare.png
          _7845_invalid-prepare.png
          381 kB
        3. _dcp-prepare-png.png
          _dcp-prepare-png.png
          346 kB
        4. _no non-subdoc fronend op.png
          _no non-subdoc fronend op.png
          33 kB
        5. _subdoc ops only against 105.png
          _subdoc ops only against 105.png
          212 kB
        6. 6.6.0-7845_client_run_1.pcapng
          1.74 MB
        7. 6.6.0-7845_node_run_1.pcap
          4.17 MB
        8. test.log
          33 kB
        9. test.pcap
          20.11 MB
        10. trans_expired_with_d_ambiguous_new.pcapng
          2.06 MB
        11. trans_expired_with_d_ambiguous.pcapng
          2.09 MB

        Issue Links

          Activity

            People

              ashwin.govindarajulu Ashwin Govindarajulu
              ashwin.govindarajulu Ashwin Govindarajulu
              Votes:
              0 Vote for this issue
              Watchers:
              6 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                PagerDuty